--- a/app/src/main/res/layout/custom_examlistitem.xml
+++ b/app/src/main/res/layout/custom_examlistitem.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
 
     <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -108,4 +110,4 @@
 
     </android.support.v7.widget.CardView>
 
-
+</LinearLayout>
