--- a/app/src/main/res/layout/dialog_title_newexam.xml
+++ b/app/src/main/res/layout/dialog_title_newexam.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/findnew"
+        android:text="@string/find_new_exam"
         android:textColor="@android:color/white"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />
 
