--- a/app/src/main/res/drawable/ic_sort_24dp_white.xml
+++ b/app/src/main/res/drawable/ic_sort_24dp_white.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#ffffffff"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="M3,18h6v-2H3v2zM3,6v2h18V6H3zm0,7h12v-2H3v2z"/>
 </vector>
