--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/Messages"
+        android:text="@string/messages"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 </LinearLayout>
