--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     <group android:id="@+id/main_group">
         <item
             android:id="@+id/action_logout"
-            android:icon="@drawable/ic_person_24dp"
+            android:icon="@drawable/ic_person_24dp_primarylight"
             android:title="@string/logout"
             appcompat:showAsAction="withText" />
 
@@ -23,7 +23,7 @@
 
         <item
             android:id="@+id/action_sortby"
-            android:icon="@drawable/ic_sort_24dp"
+            android:icon="@drawable/ic_sort_24dp_white"
             android:title="@string/SortBy"
             appcompat:showAsAction="ifRoom" />
 
