--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -10,7 +10,9 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        ></include>
+        >
+
+    </include>
     <android.support.v4.view.ViewPager
 
     android:id="@+id/pager"
