--- a/app/src/main/res/layout/dialog_add_anonymous_exam.xml
+++ b/app/src/main/res/layout/dialog_add_anonymous_exam.xml
@@ -3,8 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="24dp">
+    android:background="@android:color/background_light">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="12dp">
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/add_anonymous_examId"
@@ -26,8 +35,7 @@
         android:id="@+id/btn_anonymous_exam"
         android:layout_width="260sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:background="@color/colorPrimary"
         android:text="@string/find_new_exam"
         android:textColor="@android:color/white" />
@@ -40,4 +48,5 @@
         android:textColor="@color/colorError"
         />
 
+    </LinearLayout>
 </LinearLayout>
