--- a/app/src/main/res/layout/dialog_sort_exams.xml
+++ b/app/src/main/res/layout/dialog_sort_exams.xml
@@ -1,24 +1,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@android:color/background_light"
+    android:elevation="2dp"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/patient_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
-        android:id="@+id/patient_button"
-        android:clickable="true">
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/radio_patient"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/patient"
-            android:textSize="17sp"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+            android:textColor="@color/colorTextColorLight"
+            android:textSize="17sp" />
 
         <ImageView
             android:id="@+id/radio_icon_patient"
@@ -32,52 +35,53 @@
     </LinearLayout>
 
 
-
     <LinearLayout
+        android:id="@+id/identification_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="24dp"
-        android:id="@+id/identification_button"
-        android:clickable="true">
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/radio_identification"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/identification"
-            android:textSize="17sp"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+            android:textColor="@color/colorTextColorLight"
+            android:textSize="17sp" />
 
         <ImageView
             android:id="@+id/radio_icon_identification"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="32dp"
-            android:contentDescription="@string/sort_icon"
-            />
+            android:contentDescription="@string/sort_icon" />
 
-        </LinearLayout>
-
+    </LinearLayout>
 
 
     <LinearLayout
+        android:id="@+id/date_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="12dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp"
-        android:id="@+id/date_button"
-        android:clickable="true">
+        android:clickable="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/radio_executionDate"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="@string/executionDate"
             android:checked="false"
-            android:textSize="17sp"/>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+            android:text="@string/executionDate"
+            android:textColor="@color/colorTextColorLight"
+            android:textSize="17sp" />
 
 
         <ImageView
@@ -85,9 +89,36 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="32dp"
-            android:contentDescription="@string/sort_icon"
-            />
+            android:contentDescription="@string/sort_icon" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/cancel_sort_btn"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:text="@string/cancel"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorPrimary" />
+
+        <Button
+            android:id="@+id/sort_exam_oke_btn"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginRight="16dp"
+            android:background="@android:color/transparent"
+            android:text="@string/sort"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
 </LinearLayout>
