--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -2,18 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_material_special_primary"
     android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/imagesFail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:textColor="@color/colorError"
-        android:drawableStart="@drawable/ic_error_36dp_error"
         android:drawablePadding="12dp"
+        android:drawableStart="@drawable/ic_error_36dp_error"
         android:gravity="center_vertical"
-        />
+        android:textColor="@color/colorError" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -25,11 +26,14 @@
 
     <GridView
         android:id="@+id/grid_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
+        android:horizontalSpacing="0dp"
         android:numColumns="auto_fit"
-        android:stretchMode="columnWidth">
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="0dp">
 
     </GridView>
+
 </RelativeLayout>
