--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_information_layout"
     style="@style/Widget.AppCompat.Button.Borderless.Colored"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +8,7 @@
     android:gravity="top">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -15,8 +17,7 @@
         android:background="@android:color/background_light"
         android:elevation="2dp"
         android:orientation="vertical"
-        android:padding="6dp"
-        android:id="@+id/linearLayout">
+        android:padding="6dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -252,11 +253,8 @@
         <include
             layout="@layout/fragment_information_section_comments"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
+            android:layout_height="wrap_content" />
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
