--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_report_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_material_special_primary">
@@ -7,30 +8,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="@android:color/background_light"
         android:clipToPadding="false"
         android:elevation="2dp"
-        android:background="@android:color/background_light"
         android:orientation="vertical">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
-                android:padding="11dp"
                 android:id="@+id/report_test_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="11dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Body2" />
         </ScrollView>
 
     </LinearLayout>
-    <!--  <WebView
-          android:id="@+id/report_web_view"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" />-->
+
 
 </RelativeLayout>
