--- a/app/src/main/res/layout/activity_anonymous_information.xml
+++ b/app/src/main/res/layout/activity_anonymous_information.xml
@@ -7,6 +7,7 @@
     android:gravity="top">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -15,8 +16,7 @@
         android:background="@android:color/background_light"
         android:elevation="2dp"
         android:orientation="vertical"
-        android:padding="6dp"
-        android:id="@+id/linearLayout">
+        android:padding="6dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -55,8 +55,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/gs_exam_header_linearlayout"
                 android:layout_centerHorizontal="true"
-                android:padding="5dp"
                 android:layout_marginTop="5dp"
+                android:padding="5dp"
                 android:text="@string/exam_type"
                 android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
@@ -212,11 +212,11 @@
             android:id="@+id/create_account_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
+            android:layout_gravity="right"
             android:layout_marginBottom="12dp"
-            android:layout_gravity="right">
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/create_account_btn"
@@ -233,7 +233,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/moreInfo"
-                android:textColor="@color/colorPrimary"/>
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
     </LinearLayout>
