--- a/app/src/main/res/layout/country_row.xml
+++ b/app/src/main/res/layout/country_row.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:drawableLeft="@drawable/ic_country_16dp_primary"
     android:background="@color/colorPrimary300"
+    android:drawablePadding="4dp"
     android:padding="4dp"
     android:textColor="@android:color/white"
     android:textSize="14sp" />
+
