--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -17,7 +17,9 @@
         android:background="@android:color/background_light"
         android:elevation="2dp"
         android:orientation="vertical"
-        android:padding="6dp">
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -57,6 +59,8 @@
                 android:layout_below="@id/gs_exam_header_linearlayout"
                 android:layout_centerHorizontal="true"
                 android:padding="5dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
                 android:text="@string/exam_type"
                 android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
