--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -158,7 +158,7 @@
                         android:text="@string/personal_info" />
 
                     <android.support.v7.widget.AppCompatSpinner
-                        android:id="@+id/spinner_gender"
+                        android:id="@+id/gender_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.7"
