--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:spinnerDropDownItemStyle">@style/GenderInput</item>
     </style>
+
     <!--Theme used for the login application-->
     <style name="LoginTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -45,16 +45,18 @@
         <item name="android:colorControlHighlight">@color/colorTextColorLight</item>
         <item name="android:colorControlActivated">@color/colorTextColorLight</item>
     </style>
+
+
     <!-- Text Appearance Styles-->
     <style name="TextAppearence.App.TextInputLayout" parent="@android:style/TextAppearance">
     <item name="android:textColor">@color/colorPrimaryDark</item>
     <item name="android:textColorHint">@color/colorPrimary</item>
     </style>
-
     <style name="TextAppearance.App.Authentication.Progress" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
+    <!--Drop down styles -->
     <style name="ActionBarDropDownItems" parent="AppTheme">
         <item name="android:textColor">@color/colorPrimary300</item>
         <item name="android:background">@android:color/transparent</item>
