--- a/app/src/main/res/layout/section_fullscreen_image.xml
+++ b/app/src/main/res/layout/section_fullscreen_image.xml
@@ -4,17 +4,16 @@
     android:layout_height="match_parent" >
 
     <br.com.managersystems.guardasaude.exams.exammenu.images.TouchImageView
-        android:id="@+id/imgDisplay"
+        android:id="@+id/img_display"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitCenter" />
 
 
     <ImageView
-        android:id="@+id/btnClose"
+        android:id="@+id/btn_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
